[package]
name = "sensor_reader"
version = "0.1.0"
edition = "2024"

[dependencies]
serialport = "4.6"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
