[package]
name = "sensor_reader"
version = "0.1.0"
edition = "2024"

[dependencies]
serialport = "4.6"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls", "rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
